--- a/investigaciones.html
+++ b/investigaciones.html
@@ -96,19 +96,80 @@
     </p>
 
     <!-- PROYECTO ECOHOTEL -->
-    <h3 style="color:#1f6feb; margin-top:40px; margin-bottom:4px;">
+    <h3 style="color:#1f6feb; margin-top:40px; margin-bottom:12px;">
       Proyecto Ecohotel “Los Arrendajos”
     </h3>
-    <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="proyecto-ecohotel.html"
-         target="_blank"
-         style="color:inherit; text-decoration:none;">
-        Ver fases del proyecto
-      </a>
+    <p style="margin-top:0; margin-bottom:12px; line-height:1.6;">
+      Desarrollo completo del proyecto Ecohotel organizado por fases: estudio normativo, generalidades, mapa de valor, stakeholders, mercado y modelo de negocio.
     </p>
-    <p style="margin-top:8px; line-height:1.6;">
-      Desarrollo completo del proyecto Ecohotel “Los Arrendajos”, organizado por fases: introducción, stakeholders, mercado y modelo de negocio.
-    </p>
+
+    <!-- Cuadros con documentos del proyecto -->
+    <div style="display:grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap:20px; margin-top:12px;">
+
+      <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9;">
+        <h4 style="margin:0 0 8px 0; color:#1f6feb;">Estudio Normativo</h4>
+        <a href="soportes/investigaciones/formulacion-de-proyectos/estudio-normativo.pdf" target="_blank">
+          Ver documento
+        </a>
+      </div>
+
+      <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9;">
+        <h4 style="margin:0 0 8px 0; color:#1f6feb;">Generalidades del Proyecto</h4>
+        <a href="soportes/investigaciones/formulacion-de-proyectos/generalidades-del-proyecto-del-ecohotel.pdf" target="_blank">
+          Ver documento
+        </a>
+      </div>
+
+      <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9;">
+        <h4 style="margin:0 0 8px 0; color:#1f6feb;">Mapa de Valor</h4>
+        <a href="soportes/investigaciones/formulacion-de-proyectos/mapa-de-valor.pdf" target="_blank">
+          Ver documento
+        </a>
+      </div>
+
+      <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9;">
+        <h4 style="margin:0 0 8px 0; color:#1f6feb;">Stakeholders & Mapeo</h4>
+        <a href="soportes/investigaciones/formulacion-de-proyectos/mapeo-de-stakeholders.pdf" target="_blank">
+          Ver documento
+        </a>
+      </div>
+
+      <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9;">
+        <h4 style="margin:0 0 8px 0; color:#1f6feb;">Relación de Actores</h4>
+        <a href="soportes/investigaciones/formulacion-de-proyectos/relacion-de-actores.pdf" target="_blank">
+          Ver documento
+        </a>
+      </div>
+
+      <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9;">
+        <h4 style="margin:0 0 8px 0; color:#1f6feb;">Tipos de Involucrados</h4>
+        <a href="soportes/investigaciones/formulacion-de-proyectos/tipos-de-involucrados.pdf" target="_blank">
+          Ver documento
+        </a>
+      </div>
+
+      <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9;">
+        <h4 style="margin:0 0 8px 0; color:#1f6feb;">Mercado Potencial</h4>
+        <a href="soportes/investigaciones/formulacion-de-proyectos/mercado-potencial-ecohotel.pdf" target="_blank">
+          Ver documento
+        </a>
+      </div>
+
+      <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9;">
+        <h4 style="margin:0 0 8px 0; color:#1f6feb;">Modelo CANVAS</h4>
+        <a href="soportes/investigaciones/formulacion-de-proyectos/modelo-CANVAS.pdf" target="_blank">
+          Ver documento
+        </a>
+      </div>
+
+      <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9;">
+        <h4 style="margin:0 0 8px 0; color:#1f6feb;">Proyección de Mercado</h4>
+        <a href="soportes/investigaciones/formulacion-de-proyectos/proyeccion-de-mercado.pdf" target="_blank">
+          Ver documento
+        </a>
+      </div>
+
+    </div>
 
     <p style="margin-top:40px;">
       <a href="index.html" style="color:#1f6feb; text-decoration:none;">
