--- a/investigaciones.html
+++ b/investigaciones.html
@@ -21,155 +21,97 @@
     <h2>Investigaciones</h2>
 
     <!-- ORDENAMIENTO TERRITORIAL -->
-    <h3 style="color:#1f6feb; margin-bottom:4px;">
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:12px;">
       Estrategias Integrales para el Ordenamiento Territorial
     </h3>
-    <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="soportes/investigaciones/avance-investigacion-ordenamiento-territorial-meta.pdf"
-         target="_blank"
-         style="color:inherit; text-decoration:none;">
-        Avance de investigación – Subregión Ariari (Meta)
-      </a>
-    </p>
-    <p style="margin-top:8px; line-height:1.6;">
+    <p style="margin-top:0; margin-bottom:12px; line-height:1.6;">
       Documento de avance investigativo orientado al análisis del ordenamiento territorial y el desarrollo regional sostenible.
     </p>
+    <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9; max-width:400px;">
+      <h4 style="margin:0 0 8px 0; color:#1f6feb;">
+        Avance de investigación – Subregión Ariari (Meta)
+      </h4>
+      <a href="soportes/investigaciones/avance-investigacion-ordenamiento-territorial-meta.pdf" target="_blank">
+        Ver documento
+      </a>
+    </div>
 
     <!-- COCA Y PIB -->
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:12px;">
       Impacto Económico de la Producción de Coca en el PIB
     </h3>
-    <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="soportes/investigaciones/impacto-economico-coca-pib-narino-1999-2023.pdf"
-         target="_blank"
-         style="color:inherit; text-decoration:none;">
+    <p style="margin-top:0; margin-bottom:12px; line-height:1.6;">
+      Análisis del impacto económico de la producción de coca en el Producto Interno Bruto del departamento de Nariño durante el periodo 1999–2023.
+    </p>
+    <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9; max-width:400px;">
+      <h4 style="margin:0 0 8px 0; color:#1f6feb;">
         Investigación económica aplicada
+      </h4>
+      <a href="soportes/investigaciones/impacto-economico-coca-pib-narino-1999-2023.pdf" target="_blank">
+        Ver documento
       </a>
-    </p>
-    <p style="margin-top:8px; line-height:1.6;">
-      Análisis del impacto económico de la producción de coca en el PIB del departamento de Nariño durante el periodo 1999–2023.
-    </p>
+    </div>
 
     <!-- ÍNDICE MULTIDIMENSIONAL -->
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:12px;">
       Índice Multidimensional de Bogotá
     </h3>
-    <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="soportes/investigaciones/indice-multidimensional-bogota-2013-2023.pdf"
-         target="_blank"
-         style="color:inherit; text-decoration:none;">
+    <p style="margin-top:0; margin-bottom:12px; line-height:1.6;">
+      Estudio del comportamiento del índice multidimensional en la ciudad de Bogotá entre los años 2013 y 2023, con enfoque socioeconómico.
+    </p>
+    <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9; max-width:400px;">
+      <h4 style="margin:0 0 8px 0; color:#1f6feb;">
         Documento de análisis estadístico
+      </h4>
+      <a href="soportes/investigaciones/indice-multidimensional-bogota-2013-2023.pdf" target="_blank">
+        Ver documento
       </a>
-    </p>
-    <p style="margin-top:8px; line-height:1.6;">
-      Estudio del comportamiento del índice multidimensional en Bogotá entre 2013 y 2023 con enfoque socioeconómico.
-    </p>
+    </div>
 
     <!-- MODELO AMBIENTAL -->
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:12px;">
       Modelo de Interacción Ambiental
     </h3>
-    <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="soportes/investigaciones/modelo-interaccion-ambiental-alma-viva.pdf"
-         target="_blank"
-         style="color:inherit; text-decoration:none;">
-        Parque Metropolitano Alma Viva
+    <p style="margin-top:0; margin-bottom:12px; line-height:1.6;">
+      Propuesta de modelo de interacción ambiental aplicada al Parque Metropolitano Alma Viva, con énfasis en sostenibilidad y gestión ambiental urbana.
+    </p>
+    <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9; max-width:400px;">
+      <h4 style="margin:0 0 8px 0; color:#1f6feb;">
+        Modelo de Interacción Ambiental – Parque Metropolitano Alma Viva
+      </h4>
+      <a href="soportes/investigaciones/modelo-interaccion-ambiental-alma-viva.pdf" target="_blank">
+        Ver documento
       </a>
-    </p>
-    <p style="margin-top:8px; line-height:1.6;">
-      Propuesta de modelo de interacción ambiental aplicada al parque con énfasis en sostenibilidad y gestión urbana.
-    </p>
+    </div>
 
     <!-- DE LA GUERRA A LA SOÑADA PAZ -->
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:12px;">
       De la Guerra a la Soñada Paz
     </h3>
-    <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="soportes/investigaciones/de-la-guerra-a-la-sonada-paz.pdf"
-         target="_blank"
-         style="color:inherit; text-decoration:none;">
+    <p style="margin-top:0; margin-bottom:12px; line-height:1.6;">
+      Investigación sobre procesos de construcción de paz y reconciliación en contextos posconflicto.
+    </p>
+    <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9; max-width:400px;">
+      <h4 style="margin:0 0 8px 0; color:#1f6feb;">
         Documento de investigación
+      </h4>
+      <a href="soportes/investigaciones/de-la-guerra-a-la-sonada-paz.pdf" target="_blank">
+        Ver documento
       </a>
-    </p>
-    <p style="margin-top:8px; line-height:1.6;">
-      Investigación sobre procesos de paz y transformación social en el territorio.
-    </p>
+    </div>
 
     <!-- PROYECTO ECOHOTEL -->
-    <h3 style="color:#1f6feb; margin-top:40px; margin-bottom:12px;">
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:12px;">
       Proyecto Ecohotel “Los Arrendajos”
     </h3>
     <p style="margin-top:0; margin-bottom:12px; line-height:1.6;">
-      Desarrollo completo del proyecto Ecohotel organizado por fases: estudio normativo, generalidades, mapa de valor, stakeholders, mercado y modelo de negocio.
+      Desarrollo integral del proyecto de turismo sostenible “Ecohotel Los Arrendajos”, incluyendo planificación, análisis de mercado y gestión de actores.
     </p>
-
-    <!-- Cuadros con documentos del proyecto -->
-    <div style="display:grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap:20px; margin-top:12px;">
-
-      <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9;">
-        <h4 style="margin:0 0 8px 0; color:#1f6feb;">Estudio Normativo</h4>
-        <a href="soportes/investigaciones/formulacion-de-proyectos/estudio-normativo.pdf" target="_blank">
-          Ver documento
-        </a>
-      </div>
-
-      <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9;">
-        <h4 style="margin:0 0 8px 0; color:#1f6feb;">Generalidades del Proyecto</h4>
-        <a href="soportes/investigaciones/formulacion-de-proyectos/generalidades-del-proyecto-del-ecohotel.pdf" target="_blank">
-          Ver documento
-        </a>
-      </div>
-
-      <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9;">
-        <h4 style="margin:0 0 8px 0; color:#1f6feb;">Mapa de Valor</h4>
-        <a href="soportes/investigaciones/formulacion-de-proyectos/mapa-de-valor.pdf" target="_blank">
-          Ver documento
-        </a>
-      </div>
-
-      <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9;">
-        <h4 style="margin:0 0 8px 0; color:#1f6feb;">Stakeholders & Mapeo</h4>
-        <a href="soportes/investigaciones/formulacion-de-proyectos/mapeo-de-stakeholders.pdf" target="_blank">
-          Ver documento
-        </a>
-      </div>
-
-      <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9;">
-        <h4 style="margin:0 0 8px 0; color:#1f6feb;">Relación de Actores</h4>
-        <a href="soportes/investigaciones/formulacion-de-proyectos/relacion-de-actores.pdf" target="_blank">
-          Ver documento
-        </a>
-      </div>
-
-      <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9;">
-        <h4 style="margin:0 0 8px 0; color:#1f6feb;">Tipos de Involucrados</h4>
-        <a href="soportes/investigaciones/formulacion-de-proyectos/tipos-de-involucrados.pdf" target="_blank">
-          Ver documento
-        </a>
-      </div>
-
-      <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9;">
-        <h4 style="margin:0 0 8px 0; color:#1f6feb;">Mercado Potencial</h4>
-        <a href="soportes/investigaciones/formulacion-de-proyectos/mercado-potencial-ecohotel.pdf" target="_blank">
-          Ver documento
-        </a>
-      </div>
-
-      <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9;">
-        <h4 style="margin:0 0 8px 0; color:#1f6feb;">Modelo CANVAS</h4>
-        <a href="soportes/investigaciones/formulacion-de-proyectos/modelo-CANVAS.pdf" target="_blank">
-          Ver documento
-        </a>
-      </div>
-
-      <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9;">
-        <h4 style="margin:0 0 8px 0; color:#1f6feb;">Proyección de Mercado</h4>
-        <a href="soportes/investigaciones/formulacion-de-proyectos/proyeccion-de-mercado.pdf" target="_blank">
-          Ver documento
-        </a>
-      </div>
-
-    </div>
+    <h4 style="margin-top:12px;">
+      <a href="fases-ecohotel.html" style="color:#1f6feb; text-decoration:none;">
+        Fases del proyecto
+      </a>
+    </h4>
 
     <p style="margin-top:40px;">
       <a href="index.html" style="color:#1f6feb; text-decoration:none;">
