--- a/investigaciones.html
+++ b/investigaciones.html
@@ -93,7 +93,7 @@
     </p>
     <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9; max-width:400px;">
       <h4 style="margin:0 0 8px 0; color:#1f6feb;">
-        Documento de investigación
+        Columbia: Caminos hacia la Paz y la Reconstrucción
       </h4>
       <a href="soportes/investigaciones/de-la-guerra-a-la-sonada-paz.pdf" target="_blank">
         Ver documento
