--- a/investigaciones.html
+++ b/investigaciones.html
@@ -45,7 +45,7 @@
     </p>
     <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9; max-width:400px;">
       <h4 style="margin:0 0 8px 0; color:#1f6feb;">
-        Investigación de politica agraria
+        Investigación de política agraria
       </h4>
       <a href="soportes/investigaciones/impacto-economico-coca-pib-narino-1999-2023.pdf" target="_blank">
         Ver documento
