--- a/investigaciones.html
+++ b/investigaciones.html
@@ -61,7 +61,7 @@
     </p>
     <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9; max-width:400px;">
       <h4 style="margin:0 0 8px 0; color:#1f6feb;">
-        Documento de análisis estadístico
+        Evolución del Índice Multidimensional de Bogotá: 2013–2023
       </h4>
       <a href="soportes/investigaciones/indice-multidimensional-bogota-2013-2023.pdf" target="_blank">
         Ver documento
