--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
         <h2>Perfil Laboral</h2>
 
         <p style="line-height:1.6;">
-          Estudiante de Economía con formación técnica y universitaria, interesado en el análisis económico aplicado,
-          el ordenamiento territorial y el desarrollo sostenible, con experiencia en procesos de investigación académica
-          y análisis financiero de organizaciones en contextos institucionales.
+          Estudiante de último semestre de Economía, con interés y experiencia en investigación en 
+          economía ambiental y sostenibilidad. Miembro activo de un semillero de investigación durante varios semestres, 
+          participando en estudios y proyectos relacionados con políticas económicas sostenibles. 
+          Además, he brindado apoyo a asociaciones comunitarias en la gestión administrativa de recursos, 
+          elaborando informes técnicos y financieros para fortalecer su salud económica y optimizar la toma de decisiones.
         </p>
 
         <h2 style="margin-top:35px;">Secciones</h2>
