--- a/experiencia.html
+++ b/experiencia.html
@@ -1,7 +1,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>EXPE | DSBC</title>
+  <title>EDUC | DSBC</title>
 </head>
 
 <body>
@@ -18,61 +18,140 @@
     color:#24292f;
   ">
 
-    <h2>Experiencia</h2>
+    <h2>Educación</h2>
+    <p style="margin-bottom:24px;">Documentos académicos y certificaciones oficiales obtenidas durante mi formación.</p>
 
-    <!-- PASANTÍA / EPI -->
-    <h3 style="color:#1f6feb; margin-bottom:4px;">
-      Pasantía en Investigación
-    </h3>
+    <!-- CERTIFICADO DE CRÉDITOS -->
+    <div style="
+      border:1px solid #ddd; border-radius:12px; padding:20px; background:#fff; 
+      box-shadow:0 6px 18px rgba(0,0,0,0.08); margin-bottom:20px;
+      display:flex; justify-content:space-between; align-items:center;">
+      <div>
+        <h3 style="margin:0 0 6px 0; color:#1f6feb;">Certificado de Créditos Académicos</h3>
+        <p style="margin:0; color:#24292f; line-height:1.5;">
+          Documento que acredita los créditos cursados y aprobados dentro del programa académico.
+        </p>
+      </div>
+      <div>
+        <a href="soportes/educacion/certificado-creditos.pdf" target="_blank" style="
+          background:#1f6feb; color:white; text-decoration:none;
+          padding:8px 14px; border-radius:6px; font-weight:bold;
+          transition:0.3s;"
+          onmouseover="this.style.background='#155bb5'" onmouseout="this.style.background='#1f6feb'">
+          Ver PDF
+        </a>
+      </div>
+    </div>
 
-    <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="soportes/experiencia/pasantia-investigacion.pdf"
-         target="_blank"
-         style="color:inherit; text-decoration:none;">
-        Certificado EPI
-      </a>
-    </p>
+    <!-- ESG -->
+    <div style="
+      border:1px solid #ddd; border-radius:12px; padding:20px; background:#fff; 
+      box-shadow:0 6px 18px rgba(0,0,0,0.08); margin-bottom:20px;
+      display:flex; justify-content:space-between; align-items:center;">
+      <div>
+        <h3 style="margin:0 0 6px 0; color:#1f6feb;">ESG – Estrategias de Sostenibilidad</h3>
+        <p style="margin:0; color:#24292f; line-height:1.5;">
+          Certificado de formación en estrategias de sostenibilidad, enfoque ESG y gestión responsable.
+        </p>
+      </div>
+      <div>
+        <a href="soportes/educacion/esg-estrategias-sostenibilidad.pdf" target="_blank" style="
+          background:#1f6feb; color:white; text-decoration:none;
+          padding:8px 14px; border-radius:6px; font-weight:bold;
+          transition:0.3s;"
+          onmouseover="this.style.background='#155bb5'" onmouseout="this.style.background='#1f6feb'">
+          Ver PDF
+        </a>
+      </div>
+    </div>
 
-    <p style="margin-top:8px; line-height:1.6;">
-      Apoyo en procesos de investigación académica, análisis de información
-      y elaboración de insumos para trabajos investigativos.
-    </p>
+    <!-- ECONOMETRÍA -->
+    <div style="
+      border:1px solid #ddd; border-radius:12px; padding:20px; background:#fff; 
+      box-shadow:0 6px 18px rgba(0,0,0,0.08); margin-bottom:20px;
+      display:flex; justify-content:space-between; align-items:center;">
+      <div>
+        <h3 style="margin:0 0 6px 0; color:#1f6feb;">Introducción a la Econometría</h3>
+        <p style="margin:0; color:#24292f; line-height:1.5;">
+          Certificado académico en fundamentos de econometría, análisis estadístico y modelos básicos.
+        </p>
+      </div>
+      <div>
+        <a href="soportes/educacion/introduccion-econometria.pdf" target="_blank" style="
+          background:#1f6feb; color:white; text-decoration:none;
+          padding:8px 14px; border-radius:6px; font-weight:bold;
+          transition:0.3s;"
+          onmouseover="this.style.background='#155bb5'" onmouseout="this.style.background='#1f6feb'">
+          Ver PDF
+        </a>
+      </div>
+    </div>
 
-    <!-- PORFÍA 1 -->
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
-      Apoyo Técnico Administrativo
-    </h3>
+    <!-- ACTA -->
+    <div style="
+      border:1px solid #ddd; border-radius:12px; padding:20px; background:#fff; 
+      box-shadow:0 6px 18px rgba(0,0,0,0.08); margin-bottom:20px;
+      display:flex; justify-content:space-between; align-items:center;">
+      <div>
+        <h3 style="margin:0 0 6px 0; color:#1f6feb;">Acta Académica</h3>
+        <p style="margin:0; color:#24292f; line-height:1.5;">
+          Acta de Grado expedida por el SENA que certifica la culminación y aprobación del proceso formativo.
+        </p>
+      </div>
+      <div>
+        <a href="soportes/educacion/acta-academica.pdf" target="_blank" style="
+          background:#1f6feb; color:white; text-decoration:none;
+          padding:8px 14px; border-radius:6px; font-weight:bold;
+          transition:0.3s;"
+          onmouseover="this.style.background='#155bb5'" onmouseout="this.style.background='#1f6feb'">
+          Ver PDF
+        </a>
+      </div>
+    </div>
 
-    <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="soportes/experiencia/apoyo-tecnico-porfia-1.pdf"
-         target="_blank"
-         style="color:inherit; text-decoration:none;">
-        Certificado Laboral – Asociación de HCB Porfía 1
-      </a>
-    </p>
+    <!-- DOCUMENTO OFICIAL TCOCF -->
+    <div style="
+      border:1px solid #ddd; border-radius:12px; padding:20px; background:#fff; 
+      box-shadow:0 6px 18px rgba(0,0,0,0.08); margin-bottom:20px;
+      display:flex; justify-content:space-between; align-items:center;">
+      <div>
+        <h3 style="margin:0 0 6px 0; color:#1f6feb;">Documento Oficial TCOCF</h3>
+        <p style="margin:0; color:#24292f; line-height:1.5;">
+          Documento oficial que certifica la formación y acreditación en el programa Técnico en Contabilización de Operaciones Comerciales y Financieras.
+        </p>
+      </div>
+      <div>
+        <a href="soportes/educacion/documento-oficial-tcocf.pdf" target="_blank" style="
+          background:#1f6feb; color:white; text-decoration:none;
+          padding:8px 14px; border-radius:6px; font-weight:bold;
+          transition:0.3s;"
+          onmouseover="this.style.background='#155bb5'" onmouseout="this.style.background='#1f6feb'">
+          Ver PDF
+        </a>
+      </div>
+    </div>
 
-    <p style="margin-top:8px; line-height:1.6;">
-      Apoyo en procesos administrativos, organización documental
-      y manejo de información institucional.
-    </p>
-
-    <!-- PORFÍA 3 -->
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
-      Apoyo Técnico Administrativo
-    </h3>
-
-    <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="soportes/experiencia/apoyo-tecnico-porfia-3.pdf"
-         target="_blank"
-         style="color:inherit; text-decoration:none;">
-        Certificado Laboral – Asociación de HCB Porfía 3
-      </a>
-    </p>
-
-    <p style="margin-top:8px; line-height:1.6;">
-      Apoyo técnico y administrativo en procesos operativos
-      y acompañamiento a la gestión institucional.
-    </p>
+    <!-- CERTIFICADO FINAL -->
+    <div style="
+      border:1px solid #ddd; border-radius:12px; padding:20px; background:#fff; 
+      box-shadow:0 6px 18px rgba(0,0,0,0.08); margin-bottom:20px;
+      display:flex; justify-content:space-between; align-items:center;">
+      <div>
+        <h3 style="margin:0 0 6px 0; color:#1f6feb;">Certificado Final</h3>
+        <p style="margin:0; color:#24292f; line-height:1.5;">
+          Documento oficial que detalla las calificaciones obtenidas y la intensidad horaria total del curso.
+        </p>
+      </div>
+      <div>
+        <a href="soportes/educacion/certificado-final.pdf" target="_blank" style="
+          background:#1f6feb; color:white; text-decoration:none;
+          padding:8px 14px; border-radius:6px; font-weight:bold;
+          transition:0.3s;"
+          onmouseover="this.style.background='#155bb5'" onmouseout="this.style.background='#1f6feb'">
+          Ver PDF
+        </a>
+      </div>
+    </div>
 
     <p style="margin-top:40px;">
       <a href="index.html" style="color:#1f6feb; text-decoration:none;">
