--- a/investigaciones.html
+++ b/investigaciones.html
@@ -23,12 +23,13 @@
       font-size: 28px;
       border-bottom: 2px solid #1f6feb;
       padding-bottom: 8px;
-      margin-bottom: 30px;
+      margin-bottom: 40px;
     }
     h3 {
       color: #1f6feb;
-      margin-top: 24px;
+      margin-top: 32px;
       margin-bottom: 12px;
+      font-size: 22px;
     }
     p {
       line-height: 1.6;
@@ -41,7 +42,7 @@
       background-color: #f9f9f9;
       padding: 18px 20px;
       max-width: 480px;
-      margin-bottom: 18px;
+      margin-bottom: 24px;
     }
     .doc-card h4 {
       margin: 0 0 8px 0;
@@ -87,7 +88,7 @@
     <h3>Impacto Económico de la Producción de Coca en el PIB</h3>
     <p>Análisis del impacto económico de la producción de coca en el Producto Interno Bruto del departamento de Nariño durante 1999–2023.</p>
     <div class="doc-card">
-      <h4>Investigación económica aplicada</h4>
+      <h4>Investigación de política agraria</h4>
       <a href="soportes/investigaciones/impacto-economico-coca-pib-narino-1999-2023.pdf" target="_blank">Ver documento</a>
     </div>
 
@@ -95,7 +96,7 @@
     <h3>Índice Multidimensional de Bogotá</h3>
     <p>Estudio del comportamiento del índice multidimensional en la ciudad de Bogotá entre 2013 y 2023, con enfoque socioeconómico.</p>
     <div class="doc-card">
-      <h4>Documento de análisis estadístico</h4>
+      <h4>Evolución del Índice Multidimensional de Bogotá: 2013–2023</h4>
       <a href="soportes/investigaciones/indice-multidimensional-bogota-2013-2023.pdf" target="_blank">Ver documento</a>
     </div>
 
